0.14/_sources/api/generated/deepchecks.nlp.checks.data_integrity.SpecialCharacters.rst.txt

SpecialCharacters
=================



.. currentmodule:: deepchecks.nlp.checks.data_integrity

.. autoclass:: SpecialCharacters
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   

   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   SpecialCharacters.add_condition
   
   
   SpecialCharacters.add_condition_ratio_of_samples_with_special_characters_less_or_equal
   
   
   SpecialCharacters.add_condition_ratio_of_special_characters_less_or_equal
   
   
   SpecialCharacters.clean_conditions
   
   
   SpecialCharacters.conditions_decision
   
   
   SpecialCharacters.config
   
   
   SpecialCharacters.from_config
   
   
   SpecialCharacters.from_json
   
   
   SpecialCharacters.metadata
   
   
   SpecialCharacters.name
   
   
   SpecialCharacters.params
   
   
   SpecialCharacters.remove_condition
   
   
   SpecialCharacters.run
   
   
   SpecialCharacters.run_logic
   
   
   SpecialCharacters.to_json
   


















