0.18/_sources/api/generated/deepchecks.nlp.checks.data_integrity.SpecialCharacters.rst.txt

SpecialCharacters
=================



.. currentmodule:: deepchecks.nlp.checks.data_integrity

.. autoclass:: SpecialCharacters
   :special-members: __init__



.. rubric:: Attributes

.. autosummary::
   :toctree:

   

   






.. rubric:: Methods

.. autosummary::
   :toctree:

   
   
   SpecialCharacters.add_condition
   
   
   SpecialCharacters.add_condition_samples_ratio_w_special_characters_less_or_equal
   
   
   SpecialCharacters.clean_conditions
   
   
   SpecialCharacters.conditions_decision
   
   
   SpecialCharacters.config
   
   
   SpecialCharacters.from_config
   
   
   SpecialCharacters.from_json
   
   
   SpecialCharacters.metadata
   
   
   SpecialCharacters.name
   
   
   SpecialCharacters.params
   
   
   SpecialCharacters.remove_condition
   
   
   SpecialCharacters.run
   
   
   SpecialCharacters.run_logic
   
   
   SpecialCharacters.to_json
   
















Examples
~~~~~~~~

.. raw:: html

    <div class="sphx-glr-thumbcontainer">

.. only:: html

 .. figure:: /nlp/auto_checks/data_integrity/images/thumb/sphx_glr_plot_special_characters_thumb.png
     :alt: SpecialCharacters

     :ref:`sphx_glr_nlp_auto_checks_data_integrity_plot_special_characters.py`

.. raw:: html

    </div>
    <div style="clear:both"></div>


